--- a/source/stylesheets/layout/_form.scss
+++ b/source/stylesheets/layout/_form.scss
@@ -37,7 +37,7 @@ legend {
 
   padding: 0; /* 3 */
 
-  font-weight: $font-weight('bolder');
+  font-weight: $font-weights('bolder');
 
   white-space: normal; /* 1 */
 
