--- a/source/stylesheets/themes/_print.scss
+++ b/source/stylesheets/themes/_print.scss
@@ -22,7 +22,7 @@
   a,
   a:link,
   a:visited {
-    font-weight: $font-weights('bold');
+    font-weight: font-weights('bold');
 
     text-decoration: underline;
 
