--- a/source/stylesheets/themes/_qa.scss
+++ b/source/stylesheets/themes/_qa.scss
@@ -30,7 +30,7 @@
 
     z-index: layer('modal');
     padding: 1em;
-    font-weight: $font-weights('heavy');
+    font-weight: font-weights('heavy');
 
     text-align: center;
     color: palette('white');
