feat: add blog and scripts html

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,9 +8,13 @@
 
     <main role="main" id="conteudo" class="main">
       {{ partial "contact.html" . }}
+      {{ partial "blog.html" . }}
     </main>
 
   </div>
+
+  {{ partial "scripts.html" . }}
+
 
 </body>
 </html>
