feat: create footer partial

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,9 +6,9 @@
   <div class="main-container">
     {{ partial "header.html" . }}
 
-    <main role="main" id="conteudo" class="main">
-      {{ partial "contact.html" . }}
+    <main role="main" id="conteudo">
     </main>
+    {{ partial "footer.html" . }}
 
   </div>
 
