--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,3 +1,7 @@
-<input type="checkbox" id="menu-controller" class="menu-controller" hidden />
+<input type="checkbox" id="menu-controller" class="menu-controller" hidden>
 
-<header class="header">{{ partial "menu.html" . }}</header>
+<header class="header">
+  <div class="container">
+    {{ partial "menu.html" . }}
+  </div>
+</header>
