feat: add blog and carousel styles

--- a/source/stylesheets/abstracts/_config.scss
+++ b/source/stylesheets/abstracts/_config.scss
@@ -176,6 +176,9 @@ $palette: (
     'inverse': rgba(255, 255, 255, 0.25),
     'base': rgba(0, 0, 0, 0.2),
   ),
+  'carousel':(
+  'tag-background':rgba(0,0,0,0.6)
+  )
 );
 
 /// Default border-radius
