--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -50,10 +50,9 @@
         </div>
       </aside>
       {{ end }}
-      {{ partial "related-posts.html" . }}
 
       {{ if .Params.callToAction }}
-        {{ partial "call-to-action.html" . }}
+        <!-- {{ partial "call-to-action.html" . }} -->
       {{ end }}
 
       </main>
