--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -4,7 +4,7 @@
 {{ partial "head.html" . }}
 
 <body>
-  <div class="main-container internal-pages blog">
+  <div class="main-container internal-pages blog__list">
 
       {{ partial "header.html" . }}
 
@@ -32,7 +32,6 @@
 
       </section>
 
-      {{ partial "whatsapp.html" . }}
 
     </main>
 
