feat: create menu

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
 
     <main role="main" id="conteudo" class="main">
       {{ partial "contact.html" . }}
-      {{ partial "blog.html" . }}
+      {{/*  {{ partial "blog.html" . }}  */}}
     </main>
     {{ partial "footer.html" . }}
 
