--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -20,7 +20,7 @@
 
 // 5. Components
 @import 'components/h-entry', 'components/figure', 'components/button', 'components/checkbox-and-radio', 'components/output',
-  'components/progress', 'components/select', 'components/slider', 'components/text-field';
+  'components/progress', 'components/select', 'components/slider', 'components/logo', 'components/text-field';
 
 // 6. Page-specific styles
 @import 'pages/home';
