--- a/source/stylesheets/layout/_footer.scss
+++ b/source/stylesheets/layout/_footer.scss
@@ -13,6 +13,6 @@
 // }
 
 .footer {
-  background: palette('blue');
-  color: palette('text', 'light');
+  color: palette('text-light');
+  background: palette('menu-dark');
 }
