--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,43 @@
 <footer class="footer">
   <div class="container">
     <p>Todos os direitos reservados</p>
+{{/*
+    {{ if .Site.Menus.footer }}
+    <nav class="footer-menu" id="menu">
+
+      <ul>
+        {{ $currentPage := . }}
+        {{ range .Site.Menus.main }}
+        {{ if .HasChildren }}
+        <li class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }}">
+          <a href="#">
+            {{ .Pre }}
+            <span>{{ .Name }}</span>
+          </a>
+        </li>
+        <ul class="sub-menu">
+          {{ range .Children }}
+          <li class="{{ if $currentPage.IsMenuCurrent "main" . }}active{{ end }}">
+            <a href="{{ .URL }}">{{ .Name }}</a>
+          </li>
+          {{ end }}
+        </ul>
+        {{ else }}
+        <li>
+          <a href="{{ .URL }}">
+            {{ .Pre }}
+            <span>{{ .Name }}</span>
+          </a>
+        </li>
+        {{ end }}
+        {{ end }}
+      </ul>
+    </nav>
+    {{ end }}  */}}
   </div>
 
 
-    <!-- {{ if .IsTranslated }}
+  <!-- {{ if .IsTranslated }}
     <nav class="languages-nav">
       <ul class="languages-navlinks">
         {{ range .Translations }}
