--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <input type="checkbox" id="menu-controller" class="menu-controller" hidden>
 
 <header class="header">
-  <div class="container">
+  <div class="header-container">
     {{ partial "menu.html" . }}
   </div>
 </header>
