--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -11,3 +11,14 @@
  */
 // [role='banner'] {
 // }
+
+header {
+  background: palette('menu-dark');
+  border-bottom: 1px solid palette('white');
+}
+
+.header-container {
+  max-width: $max-width;
+  padding: to-rem(12px) to-rem(16px);
+  margin: auto;
+}
