--- a/source/stylesheets/abstracts/_font-stacks.scss
+++ b/source/stylesheets/abstracts/_font-stacks.scss
@@ -31,7 +31,7 @@ $native-font-stack:  'Roboto', sans-serif, -apple-system, system-ui, blinkmacsys
 ///
 $basic-code-font-stack: consolas, 'Liberation Mono', menlo, courier, monospace !default;
 
-$basic-title-font-stack: 'Arvo', sans-serif,  'Lato', sans-serif, 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
+$basic-title-font-stack: 'Arvo', serif, 'Lato', 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
 
 /// Font stack for conjunctions or prepositions
 ///
