--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -119,12 +119,15 @@ html {
  */
 body {
   display: flex; /* 1 */
+
   flex-direction: column; /* 1 */
+
   width: 100%;
-  height: 100vh; /* 2 */
+  // height: 100vh; /* 2 */
   min-height: 100%;
 
   margin: 0;
+
   font-size: 100%;
   line-height: 1.75;
 
@@ -135,6 +138,7 @@ body {
   > * {
     flex-shrink: 0; /* 1 */
   }
+
 }
 
 /**
@@ -142,8 +146,9 @@ body {
  */
 main,
 [role='main'] {
-  flex-grow: 1; /* 1 */
   flex-direction: column;
+  flex-grow: 1; /* 1 */
+
 }
 
 /* section items HTML5
@@ -425,7 +430,6 @@ a {
   font-size: 100%;
 
   text-decoration: none;
-
   vertical-align: baseline;
   // sass-lint:disable-block property-sort-order
 
