--- a/source/stylesheets/layout/_navigation.scss
+++ b/source/stylesheets/layout/_navigation.scss
@@ -47,13 +47,14 @@ nav a {
 
     white-space: nowrap;
 
-    background: palette('menu-dark', 'sub-menu');
+    background: palette('menu-light', 'sub-menu');
 
     box-shadow: -7px 1px 20px palette('shadow');
 
     transition-duration: 0.5s, 0.7s;
     transition-property: width, padding;
     /* stylelint-disable-next-line */
+
     .menu-controller:checked + * & {
       display: block;
       z-index: 6000;
@@ -147,11 +148,11 @@ nav a {
 
   cursor: pointer;
 
-  color: palette('text-dark');
+  color: palette('text', 'dark');
 
   @media screen and (min-width: breakpoint('desktop')) {
     &:hover {
-      color: palette('yellow');
+      color: palette('menu-light', 'anchor');
     }
   }
 }
@@ -165,18 +166,19 @@ nav a {
 
   list-style: none;
 
-  color: palette('menu-dark', 'sub-menu-text');
+  color: palette('menu-light', 'sub-menu-text');
+
   @media screen and (min-width: breakpoint('desktop')) {
     position: absolute;
-    top: 53px;
+    top: 54px;
     right: 0;
 
     width: auto;
     min-width: 170px;
 
-    color: palette('menu-dark', 'sub-menu');
+    color: palette('menu-light', 'sub-menu');
 
-    background: palette('menu-dark', 'sub-menu');
+    background: palette('menu-light', 'sub-menu');
   }
 
   li > a {
@@ -194,7 +196,7 @@ nav a {
     font-size: to-rem(12px);
     line-height: to-rem(16px);
 
-    color: palette('menu-dark', 'sub-menu-text');
+    color: palette('menu-light', 'sub-menu-text');
   }
 
   .controller:checked ~ * & {
@@ -206,9 +208,9 @@ nav a {
   li > a {
     @media screen and (min-width: breakpoint('desktop')) {
       &:hover {
-        color: palette('menu-dark', 'anchor');
+        color: palette('menu-light', 'anchor');
 
-        background-color: palette('menu-dark', 'sub-menu-hover');
+        background-color: palette('menu-light', 'sub-menu-hover');
       }
     }
   }
@@ -227,7 +229,7 @@ nav a {
 
   cursor: pointer;
 
-  color: palette('text-dark');
+  color: palette('text', 'dark');
 
   background: unset;
 
@@ -241,7 +243,7 @@ nav a {
 
     margin-left: 8px;
 
-    background-color: palette('text-dark');
+    background-color: palette('text', 'dark');
 
     content: '';
 
@@ -253,7 +255,7 @@ nav a {
     mask-size: 16px auto;
 
     &:hover {
-      background-color: palette('menu-dark', 'anchor');
+      background-color: palette('menu-light', 'anchor');
     }
   }
 
@@ -280,21 +282,19 @@ nav a {
   font-weight: bold;
   font-size: to-rem(14px);
 
-  color: palette('white');
+  color: palette('menu-light', 'text');
 
   @media screen and (min-width: breakpoint('desktop')) {
     padding: to-rem(12px) to-rem(14px);
 
     font-size: to-rem(13px);
 
-    color: palette('text-dark');
-
     background: transparent;
 
     border: 0;
 
     &:hover {
-      color: palette('menu-dark', 'anchor');
+      color: palette('menu-light', 'anchor');
     }
   }
 }
@@ -309,7 +309,7 @@ nav a {
 
   font-size: 1em;
 
-  color: palette('white');
+  color: palette('menu-light', 'text');
 
   label {
     font-size: 0;
@@ -326,7 +326,7 @@ nav a {
     font-size: 2em;
     line-height: 3.1rem;
 
-    color: palette('white');
+    color: palette('menu-light', 'text');
 
     content: '\20\2261\20';
 
@@ -384,4 +384,80 @@ nav a {
   justify-content: center;
 
   width: auto;
+}
+
+// Theme
+
+.theme--dark {
+  .main-menu {
+    @media (max-width: breakpoint('max-desktop')) {
+      background: palette('menu-dark', 'sub-menu');
+    }
+  }
+
+  .has-sub-menu {
+    color: palette('text', 'light');
+
+    @media screen and (min-width: breakpoint('desktop')) {
+      &:hover {
+        color: palette('menu-dark', 'anchor');
+      }
+    }
+  }
+
+  .sub-menu {
+    color: palette('menu-dark', 'sub-menu-text');
+
+    @media screen and (min-width: breakpoint('desktop')) {
+      color: palette('menu-dark', 'sub-menu');
+
+      background: palette('menu-dark', 'sub-menu');
+    }
+
+    li > a {
+      color: palette('menu-dark', 'sub-menu-text');
+    }
+  }
+
+  .sub-menu.active {
+    li > a {
+      @media screen and (min-width: breakpoint('desktop')) {
+        &:hover {
+          color: palette('menu-dark', 'anchor');
+
+          background-color: palette('menu-dark', 'sub-menu-hover');
+        }
+      }
+    }
+  }
+
+  .controller-label {
+    color: palette('text', 'light');
+
+    &::after {
+      background-color: palette('text', 'light');
+
+      &:hover {
+        background-color: palette('menu-dark', 'anchor');
+      }
+    }
+  }
+
+  .main-menu a {
+    color: palette('menu-dark', 'text');
+
+    @media screen and (min-width: breakpoint('desktop')) {
+      &:hover {
+        color: palette('menu-dark', 'anchor');
+      }
+    }
+  }
+
+  [for='menu-controller'] {
+    color: palette('menu-dark', 'text');
+
+    &::after {
+      color: palette('menu-dark', 'text');
+    }
+  }
 }
