feat: add copyright on footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,11 @@
 <footer class="footer">
   <div class="container">
-    <p>Todos os direitos reservados</p>
+    <div class="footer__copyright">
+      <p> YouBet! School - Todos os direitos reservados - 2021</p>
+    </div>
+
+
+
 {{/*
     {{ if .Site.Menus.footer }}
     <nav class="footer-menu" id="menu">
