--- a/source/stylesheets/abstracts/_config.scss
+++ b/source/stylesheets/abstracts/_config.scss
@@ -136,6 +136,18 @@ $palette: (
     'sub-menu-hover': #333333,
     'anchor': #f7a800,
   ),
+  'footer-dark': (
+    'base': #141414,
+    'text': #cacaca,
+    'border': #333333,
+    'anchor': #f7a800,
+  ),
+  'footer-light': (
+    'base': #ffffff,
+    'text': #141414,
+    'border': #e6e6e6,
+    'anchor': #f7a800,
+  ),
   'white': rgb(255, 255, 255),
   'black': rgb(0, 0, 0),
   'debug': rgb(255, 0, 0),
