--- a/source/stylesheets/layout/_main.scss
+++ b/source/stylesheets/layout/_main.scss
@@ -8,8 +8,23 @@
  * An `article` element can have the `[role='main']`
  */
 
+.main > section {
+  padding-top: to-rem(24px);
+  padding-bottom: to-rem(24px);
+
+  @media screen and (min-width: breakpoint('desktop')) {
+    padding-top: to-rem(80px);
+    padding-bottom: to-rem(80px);
+  }
+
+  &:nth-of-type(odd) {
+    background-color: #ffcbcb;
+  }
+}
+
 .main-container {
   display: flex;
+
   flex: 1;
   flex-direction: column;
 }
@@ -17,18 +32,24 @@
 main,
 [role='main'] {
   display: flex;
+
   flex: 1;
 }
 
 .container {
   max-width: $max-width;
 
-  padding-top: to-rem(16px);
+  padding-top: to-rem(24px);
   padding-right: $gutter;
-  padding-bottom: to-rem(16px);
+  padding-bottom: to-rem(24px);
   padding-left: $gutter;
   margin-right: auto;
   margin-left: auto;
+
+  @media screen and (min-width: breakpoint('desktop')) {
+    padding-top: to-rem(60px);
+    padding-bottom: to-rem(60px);
+  }
 }
 
 footer .container {
