--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -31,7 +31,7 @@
 @import 'pages/home';
 
 // 7. Partials-specific styles
-@import 'partials/blog';
+@import 'partials/blog', 'partials/benefits';
 
 // 8. Themes
 @import 'themes/default', 'themes/print';
