fix: glide rows error

--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -1,11 +1,11 @@
 <section class="blog">
   <div class="container">
     <div class="glide">
-      <div class="glide__arrows" data-glide-el="controls">
+      <div class="glide__arrows">
         <div>
           <h3>Blog</h3>
         </div>
-        <div class="glide__arrows--actions">
+        <div class="glide__arrows--actions" data-glide-el="controls">
           <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
           </button>
           <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
